--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.html",
   "scripts": {
     "start": "parcel index.html --open",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html",
+    "nodemon": "nodemon src/index.js"
   },
   "dependencies": {
+    "nodemon": "^1.17.3",
     "ramda": "0.25.0"
   },
   "devDependencies": {
