--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "parcel index.html --open",
     "build": "parcel build index.html",
-    "nodemon": "nodemon src/index.js"
+    "nodemon": "nodemon ./index.js"
   },
   "dependencies": {
     "nodemon": "^1.17.3",
